--- a/demoSQL/app/src/main/res/layout/activity_main.xml
+++ b/demoSQL/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lv"/>
+        android:id="@+id/rsv"/>
 
 </LinearLayout>
