--- a/demoSQL/app/src/main/res/layout/sanpham_item.xml
+++ b/demoSQL/app/src/main/res/layout/sanpham_item.xml
@@ -5,42 +5,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     android:layout_marginBottom="10dp"
-    android:padding="10dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/sp_anh_item"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_launcher_background"/>
+    android:padding="10dp"
+    android:id="@+id/layout">
         <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/sp_ten_item"
+                android:id="@+id/kh_ten_item"
                 android:text="tên"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/sp_gianhap_item"
-                android:text="tên"/>
+                android:id="@+id/kh_username_item"
+                android:text="userName"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/sp_giaban_item"
-                android:text="tên"/>
+                android:id="@+id/kh_sdt_item"
+                android:text="sđt"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/sp_tonkho_item"
-                android:text="tên"/>
+                android:id="@+id/kh_diachi_item"
+                android:text="địa chỉ"/>
         </LinearLayout>
-
-    </LinearLayout>
 </androidx.cardview.widget.CardView>
